style/style.css
/* ... */
.logo-action__yellow:hover {
  background-color: #f6b436;
}

.logo-background--red {
  background-color: #ff5959;
}
.logo-background--blue {
  background-color: #6199af;
}

.logo-background--yellow {
  background-color: #f6b436;
}
.logo-background--white {
  background-color: #fff;
}

.navigation__social-media {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  height: 50px;
}

a:hover {
  color: #ff5959;
}

.cart-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 50px;
  height: 50px;
}

.cart {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.navigation__counter--desktop {
  width: 50px;
  height: 50px;
  background-color: #ff5959;
}

.fa-user {
  font-size: 20px;
}

.background {
  border: 1px solid black;
  height: 100px;
}

.header-desktop {
  min-width: 700px;
  justify-content: space-between;
}

.background--grey {
  display: none;
  background-color: #f8f8f8;
  width: 100%;
  height: 50px;
}
.main-area-container--desktop {
  display: none;
}

.main-area__cards {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: 640px;
}

.cards {
  display: flex;
  align-items: flex-end;
  width: 500px;
  height: 200px;
}
.cards--fiestas-tematicas {
  display: flex;
  align-items: flex-end;
  width: 500px;
  height: 200px;
}
.cards--accesorios {
  display: flex;
  align-items: flex-end;
  width: 500px;
  height: 200px;
}

.cards__highlight,
.cards__highlight--fiestas-tematicas {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 200px;
  height: 100px;
  background-color: #fff;
  opacity: 0.8;
}

.cards__highlight h2,
.cards__highlight--fiestas-tematicas h2 {
  text-align: left;
  font-size: 15px;
}

.highlight__description {
  display: none;
}

.first-two-cards {
  display: flex;
  flex-direction: column;
  height: 420px;
  gap: 20px;
}

.card-tittle__size {
  font-weight: 900;
  width: 120px;
}

/* SUBMENU */

.sub-menu-desktop {
  display: none;
  flex-direction: row;
  align-items: flex-end;
  width: 100%;

  height: 220px;
}

.sub-menu-desktop__logo {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: flex-end;
  justify-content: flex-end;
  width: 500px;
  height: 100px;
}
.sub-menu-desktop__menu {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-end;

  width: 617px;
  height: 200px;
}
.logo__image {
  display: flex;
  width: 700px;
  height: 100px;
}

.menu-upper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 580px;
  height: 100px;
}

.first-button {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  font-size: 12px;
  background-color: #9faa4d;
  width: 100px;
  height: 20px;
}
.second-button {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  font-size: 12px;

  background-color: #8e789d;
  width: 100px;
  height: 20px;
}
.searchbar {
  display: flex;
  flex-direction: row;
  width: 370px;
  height: 20px;
}
.searchbar__imput {
  border: 0.5px solid grey;
  width: 390px;
  height: 20px;
}
.searchbar__icon {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: grey;
  width: 20px;
  height: 20px;
}
.menu-down {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  width: 580px;
  height: 100px;
}

.menu-down__button {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background-color: #f2f2f2;

  width: 100px;
  height: 140px;
  font-size: 13px;
}
.menu-down__button--red {
  background-color: #ff5959;
}
.menu-down__spacer {
  width: 50px;
  height: 120px;
}

.marcas-container {
  display: none;
}
.marcas-area {
  flex-direction: column;
}
.marcas-area,
.marcas-area__heading,
.main-area__button-wrap {
  display: flex;
  justify-content: center;
  align-items: center;
}
.marcas-area__logos {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 5px;
}
.greyscale {
  filter: grayscale(1);
}
.greyscale:hover {
  filter: grayscale(0);
}

@media (min-width: 600px) {
  .background--grey {
    display: flex;
    flex-direction: column;
  }
  .header {
    display: none;
  }
  .main-area-container--desktop {
    display: flex;
  }

  .main-area__cards {
    flex-direction: row;
    justify-content: space-between;
    width: 820px;
  }
  .cards--accesorios {
    width: 300px;
    height: 420px;
  }
  .cards--fiestas-tematicas {
    justify-content: flex-end;
  }
  .highlight__description {
    font-size: 10px;
    display: flex;
  }
  .card-tittle__size {
    width: 170px;
  }
  .footer__services-information {
    height: 200px;
  }
  .sub-menu-desktop {
    display: flex;
  }
  .footer__down-area {
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }
  .nav__aligner {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .marcas-container {
    display: flex;
    flex-direction: column;
  }
}

